spade-tests/src/snapshots/spade_tests__integration__trait_tests__impls_require_correct_signature_wrong_return_type_self.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self) -> Self;
}

struct A {}
struct B {}

impl X for A {
    fn a(self) -> A {
        A()
    }
}

impl X for B {
    fn a(self) -> A {
        A()
    }
}


error: Return type does not match trait
   ┌─ testinput:15:19
   │
 2 │     fn a(self) -> Self;
   │                   ---- To match the trait
   ·
15 │     fn a(self) -> A {
   │                   ^ Expected Self
